--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -145,6 +145,60 @@
   publisher={Elsevier}
 }
 
+@article{Beecham2003,
+  title={Software process improvement problems in twelve software companies: An empirical analysis},
+  author={Beecham, Sarah and Hall, Tracy and Rainer, Austen},
+  journal={Empirical software engineering},
+  volume={8},
+  pages={7--42},
+  year={2003},
+  publisher={Springer}
+}
+
+@article{Oakland2007,
+  title={Successful change management},
+  author={Oakland, John S and Tanner, Stephen},
+  journal={Total quality management \& business excellence},
+  volume={18},
+  number={1-2},
+  pages={1--19},
+  year={2007},
+  publisher={Taylor \& Francis}
+}
+
+@article{Dyba2005,
+  author={Dyba, T.},
+  journal={IEEE Transactions on Software Engineering}, 
+  title={An empirical investigation of the key factors for success in software process improvement}, 
+  year={2005},
+  volume={31},
+  number={5},
+  pages={410-424},
+  doi={10.1109/TSE.2005.53}}
+}
+
+@article{Niazi2006,
+  title={Critical success factors for software process improvement implementation: an empirical study},
+  author={Niazi, Mahmood and Wilson, David and Zowghi, Didar},
+  journal={Software Process: Improvement and Practice},
+  volume={11},
+  number={2},
+  pages={193--211},
+  year={2006},
+  publisher={Wiley Online Library}
+}
+
+@article{Danish2010,
+  title={Impact of reward and recognition on job satisfaction and motivation: An empirical study from Pakistan},
+  author={Danish, Rizwan Qaiser and Usman, Ali},
+  journal={International journal of business and management},
+  volume={5},
+  number={2},
+  pages={159},
+  year={2010},
+  publisher={Canadian Center of Science and Education}
+}
+
 %%% Our assignments %%%
 
 % TODO: make the titles preserve case-sensitivity!
