--- a/report_template_dit348.tex
+++ b/report_template_dit348.tex
@@ -561,26 +561,60 @@ measurement plans, notably M3.1 and M3.2.
 Beacause of an illness, I was unable to attend the second Lego Scrum workshop,
 so the alternative task is to be completed in this section instead.
 
-TODO: finish this section. Use the extra assignment as a reference too.
+A challenge that is commonly encountered is related to the phenomenon of
+\textbf{Change Management}. The term refers to the act of companies adapting
+to a change or reorganization at any CMM level \cite{Beecham2003}. It is
+oftentimes the case that, in the event of a low CMM level, employees are
+reluctant to change, and they do not see the benefits of the change
+\cite{Beecham2003}. One way to tackle this challenge is to employ a performance
+measurement technique that would assess the levels of performance before and
+after the change \cite{Oakland2007}. Furthermore, this would allow the
+management team to retain a sensible control over the change, as well as
+identify target areas for further improvement \cite{Oakland2007}. In essence,
+this technique is a form of a \textbf{feedback loop} that is to be utilized
+throughout the change process.
 
-%%%%%%%%%% TASK %%%%%%%%%%
-% If you did not attend the Lego workshops, this section may be dedicated to a
-% discussion of challenges in SPI projects. Find at least four relevant
-% references that mention and analyze challenges and compile an overview of
-% what has been observed in the literature.
+Another difficulty that is typically seen in software organizations is concerned
+with knowledge management. To illustrate, Dybå \cite{Dyba2005}, in a paper from
+2005, sets out to define hypotheses that would help to understand whether
+a positive association between an SPI initiative and the following two learning
+strategies exists: (i) \textit{"exploitation"}, the use of existing knowledge,
+and (ii) \textit{"exploration"}, the acquisition of new knowledge. Furthermore,
+a question is raiseded in terms of what a sensible balance between the two
+strategies is. The author concludes that the two strategies are not mutually
+exclusive, and that both learning strategies have a significant contribution to
+the success of the SPI \cite{Dyba2005}. Thereby, practitioners should apply the
+two strategies in a symbiotic nature, and a sensible balance is to be decided
+upon by the  team members and the management team of a particular organization
+based on their needs \cite{Dyba2005}.
 
-% Relate these challenges to empirical studies that have been published and to
-% your personal experience.
+Moreover, a recurring barrier of SPI initiatives is the lack of \textbf{SPI
+awareness} which stems from the lack of commitment from the management team
+and poor communication \cite{Niazi2010}. Niazi further led an empirical study 
+to identify critical success factors associated with SPI initiatives, and,
+unsurprisingly, sufficient SPI awareness was identified as one of the most
+critical factors \cite{Niazi2006}. Based on the implications of their studies,
+it can be concluded that the management team should be committed to the SPI
+initiative in a way that they are able to communicate the benefits; this is
+achievable with a series of workshops and training sessions \cite{Niazi2006}.
 
-% Identify the SPI techniques that might help to overcome these challenges.
-% Critically discuss the solution approaches from the papers.
-
-% Use the following.
-% https://canvas.gu.se/courses/68674/files/folder/Week4?preview=7880663.
-% https://canvas.gu.se/courses/68674/files/folder/Week4?preview=7880662
-% https://canvas.gu.se/courses/68674/files/folder/Week4?preview=7880661.
-% https://canvas.gu.se/courses/68674/files/folder/Week4?preview=7880660
-%%%%%%%%%% TASK %%%%%%%%%%
+Ultimately, a set of human factors are attributed to the challenges that are
+encountered in SPI projects. Beecham, Hall, and Rainer \cite{Beecham2003}
+postulate that human-related factors such as \textit{"lack of motivation"},
+\textit{"lack of commitment"}, \textit{"lack of training"}, and \textit{"lack
+of experience"}, to name a few, are universally applicable to SPI projects.
+These, however, are not so easily addressed, and require a significant amount
+of time and effort (beyond the management team's control) to be resolved.
+Nevertheless, an empirical study from Pakisan \cite{Danish2010} suggests that
+\textbf{recognition} is a key factor that motivates employees to perform better,
+which in turn, leads to a more successful SPI effort. The study further
+recommends that the management team should enable employees to participate in
+the decision-making process (to some extent, of course), so that the employees
+feel that their insights are perceived as invaluable and are taken into
+account. All in all, the implications of the study suggest that the management
+team should strive to establish a \textbf{culture of trust} in a prosperous
+environment where all parties are fairly treated and are able to communicate
+freely \cite{Danish2010}.
 
 \section{Redesign of the Software Process}
 \label{sec:redesign}
