Finish bonus task 8 (report; DIT348)

--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -199,6 +199,73 @@
   publisher={Canadian Center of Science and Education}
 }
 
+@book{Larman2010,
+  title={Practices for scaling lean \& Agile development: large, multisite, and offshore product development with large-scale scrum},
+  author={Larman, Craig and Vodde, Bas},
+  year={2010},
+  publisher={Pearson Education}
+}
+
+@inproceedings{Paasivaara2012,
+  title={Inter-team coordination in large-scale globally distributed scrum: Do scrum-of-scrums really work?},
+  author={Paasivaara, Maria and Lassenius, Casper and Heikkil{\"a}, Ville T},
+  booktitle={Proceedings of the ACM-IEEE international symposium on Empirical software engineering and measurement},
+  pages={235--238},
+  year={2012}
+}
+
+@Article{dingsoyr2019,
+  title={Agile development at scale: the next frontier},
+  author={Dings{\o}yr, Torgeir and Falessi, Davide and Power, Ken},
+  journal={IEEE software},
+  volume={36},
+  number={2},
+  pages={30--38},
+  year={2019},
+  publisher={IEEE}
+}
+
+@article{Dikert2016,
+  title={Challenges and success factors for large-scale agile transformations: A systematic literature review},
+  author={Dikert, Kim and Paasivaara, Maria and Lassenius, Casper},
+  journal={Journal of Systems and Software},
+  volume={119},
+  pages={87--108},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@article{Smite2019,
+  title={Spotify guilds: how to succeed with knowledge sharing in large-scale agile organizations},
+  author={Smite, Darja and Moe, Nils Brede and Levinta, Georgiana and Floryan, Marcin},
+  journal={Ieee Software},
+  volume={36},
+  number={2},
+  pages={51--57},
+  year={2019},
+  publisher={IEEE}
+}
+
+@article{Alqudah2016,
+  title={A review of scaling agile methods in large software development},
+  author={Alqudah, Mashal and Razali, Rozilawati},
+  journal={International Journal on Advanced Science, Engineering and Information Technology},
+  volume={6},
+  number={6},
+  pages={828--837},
+  year={2016}
+}
+
+@inproceedings{Sutherland2007,
+  author={Sutherland, Jeff and Viktorov, Anton and Blount, Jack and Puntikov, Nikolai},
+  booktitle={2007 40th Annual Hawaii International Conference on System Sciences (HICSS'07)}, 
+  title={Distributed Scrum: Agile Project Management with Outsourced Development Teams}, 
+  year={2007},
+  volume={},
+  number={},
+  pages={274a-274a},
+  doi={10.1109/HICSS.2007.180}}
+
 %%% Our assignments %%%
 
 % TODO: make the titles preserve case-sensitivity!
