Update bonus task (8)

--- a/report_template_dit348.tex
+++ b/report_template_dit348.tex
@@ -690,14 +690,14 @@ option in the event of \textit{"smaller, focused inter-team meetings with
 participants having joint goals and interests"} \cite{Paasivaara2012}.
 Furthermore, highly skilled teams are assumed with a broad understanding of the
 domain and the Agile practices \cite{Sutherland2007}. On the other hand,
-adapting \textbf{Spotify Guilds} (that largely rely on self-organization and
-autonomy) \cite{Smite2019} may be a more sensible approach, for instance.
-Spotify has been employing Agile principles for many years, and the company has
-been able to scale Agile to great extents \cite{Alqudah2016}. Needless to say,
-their approach may not be a drop-in solution for all arbitrary cases, albeit it
-should be treated as a viable alternative and a source of inspiration for other
-large-scale companies in pursuit of a \textbf{suitable} approach to inter-team
-coordination.
+adapting \textbf{Spotify Guilds} (that largely rely on self-organization,
+autonomy, and a sense of community) \cite{Smite2019} may be a more sensible
+approach, for instance. Spotify has been employing Agile principles for many
+years, and the company has been able to scale Agile to great extents
+\cite{Alqudah2016}. Needless to say, their approach may not be a drop-in
+solution for all arbitrary cases, albeit it should be treated as a viable
+alternative and a source of inspiration to other large-scale companies in
+pursuit of a \textbf{suitable} approach to inter-team coordination.
 
 \section{Summary and Lessons Learned}
 \label{sec:summary}
